# lenso-cli

./: .gitignore  .npmignore  Cargo.toml  README.md  package.json
.github/workflows/: npm-release.yml  quality.yml  release.yml
scripts/: check-npm-publish.mjs  check-npm-shim.mjs  package-npm.mjs
src/: capability.rs  host.rs  launchpad.rs  main.rs  module.rs  operator.rs  service.rs  system.rs
templates/service-rust/: Cargo.toml.tmpl  lenso.service.json.tmpl
templates/service-rust/src/: main.rs
templates/service-ts/: lenso.service.json.tmpl  package.json.tmpl  pnpm-workspace.yaml.tmpl
templates/service-ts/src/: server.ts  service.ts
templates/starter-host/: .env.example  Cargo.toml.tmpl  README.md  docker-compose.yml  justfile
templates/starter-host/src/: lib.rs
templates/starter-host/src/modules/app/: mod.rs  routes.rs
templates/starter-host/src/modules/app/migrations/: 0001_create_app_schema.sql
