[package]
name = "lenso-cli"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Lenso command-line interface for scaffolding and operating Lenso backend projects."
repository = "https://github.com/LioRael/lenso-cli"
homepage = "https://github.com/LioRael/lenso-cli"
rust-version = "1.94"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "scaffold", "backend", "framework"]
include = [
    "console/**",
    "src/**/*.rs",
    "templates/**",
    "README.md",
    "Cargo.toml",
]

[[bin]]
name = "lenso"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "time"] }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
